<resources>
    <string name="app_name" translatable="false">SOSgram</string>
    <string name="slogan">Save lives chatting</string>


    <string name="hello_world">Hello World!</string>


    <string name="navigation_drawer_open">Open NavBar</string>
    <string name="navigation_drawer_close">Close NavBar</string>

    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="fastsos">Fast SOS</string>
    <string name="about">About</string>

    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="welcome">Welcome to SOSgram</string>
    <string name="start">Start saving lives now</string>


    <string name="TLoginHeader">LogIn into your account</string>
    <string name="email">Email</string>
    <string name="hintemail">Write your email</string>
    <string name="passwd">Password</string>
    <string name="hintpasswd">Write your password</string>
    <string name="BLogin">LogIn in SOSgram</string>
    <string name="BFpasswd">Forgot your password?</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">SOSgram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
