<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_signup"
            android:title="@string/signup" />
        <item
            android:id="@+id/nav_fastsos"
            android:icon="@drawable/ic_medkit"
            android:title="@string/fastsos" />
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>


    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
            </group>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
